# ai-cr-service

./: .env  .env.example  .gitignore  Dockerfile  README-总架构.md  README.md  docker-compose.yml  pyproject.toml  test_json_extract.py  test_llm.py
rules/: default.md  go.md  java.md  python.md  react.md  security.md  typescript.md  vue.md
src/ai_cr_service/: __init__.py  config.py  main.py
src/ai_cr_service/models/: __init__.py  schemas.py
src/ai_cr_service/routers/: __init__.py  cr.py
src/ai_cr_service/services/: __init__.py  ai_service.py  cr_service.py  gitlab_service.py  rule_service.py
tests/: test_main.py
